# OOP_Lab2

./: .gitignore  CMakeLists.txt  main.cpp
include/: Array.hpp  Binary.hpp
src/: Array.cpp  Binary.cpp
test/: test.cpp
